# ziwei

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
api/: .gitignore  Cargo.toml
api/src/: args.rs  error.rs  lib.rs  main.rs  request.rs  routers.rs  state.rs  swagger.rs
api/src/handlers/: healthz.rs  mod.rs  request.rs
api/src/ziwei/: mod.rs  star.rs  utils.rs  ziwei_star.rs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-ui.yaml  hpa.yaml  ingress.yaml  service-api.yaml  service-ui.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
ui/: .dockerignore  Dockerfile  capacitor.config.ts  ionic.config.json  nginx-custom.conf  package-lock.json  package.json
ui/src/: global.scss  http.ts  pages.json  type.ts  utils.ts
ui/src/app/: app-routing.module.ts  app.module.ts  enum.ts
ui/src/app/horo-common/: horo-common.module.ts
ui/src/app/horo-common/date-time/: date-time.component.html  date-time.component.scss  date-time.component.spec.ts  date-time.component.ts
ui/src/app/horo-common/date-time-change/: date-time-change.component.html  date-time-change.component.spec.ts  date-time-change.component.ts
ui/src/app/interface/: request-data.ts  response.ts
ui/src/app/services/api/: api.service.ts
ui/src/app/services/horostorage/: ziweistorage.service.ts
ui/src/app/services/house-click/: house-click.service.spec.ts  house-click.service.ts
ui/src/app/utils/: vstar.ts
ui/src/app/ziwei/: ziwei-routing.module.ts  ziwei.module.ts  ziwei.page.html  ziwei.page.scss  ziwei.page.spec.ts  ziwei.page.ts
ui/src/app/ziwei/house/: house.component.html  house.component.scss  house.component.spec.ts  house.component.ts
ui/src/app/ziwei/info/: info.component.html  info.component.scss  info.component.spec.ts  info.component.ts
ui/src/app/ziwei/pan/: pan.component.html  pan.component.scss  pan.component.spec.ts  pan.component.ts
ui/src/components/: house.vue  info.vue
ui/src/environments/: environment.ts
ui/src/pages/index/: index.vue
ui/src/pages/ziwei/: index.vue
ziwei/: .dockerignore  Cargo.toml  Dockerfile
ziwei/db_admin/: .gitignore  Cargo.toml
ziwei/db_admin/src/: args.rs  lib.rs  main.rs  request.rs  responser.rs  routers.rs
ziwei/db_admin/src/handlers/: category.rs  gan.rs  house.rs  mod.rs  power.rs  star.rs  vstar.rs
ziwei/db_admin/templates/: base.html  gan.html  houses.html  index.html  powers.html  vstars.html
ziwei/db_admin/templates/category/: add_category.html  categories.html  edit_category.html
ziwei/db_admin/templates/star/: add_star.html  edit_star.html  edit_star_power.html  edit_star_vstar.html  star_vstar.html  stars.html  stars_base.html  stars_powers.html
ziwei/src/: error.rs  lib.rs  power.rs  star.rs  utils.rs  vstar.rs  ziwei_star.rs
